--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@
           <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="3000">
-                <img src="IMAGENES/IMG CARDIO.jpg"  class="d-block w-100" alt="slide1">
+                <img src="IMAGENES/IMG-CARDIO.jpg"  class="d-block w-100" alt="Especialidad cardiologia">
               </div>
               <div class="carousel-item ">
-                <img src="IMAGENES/img ecografia.jpg" class="d-block w-100" alt="slide2">
+                <img src="IMAGENES/img-ecografia.jpg" class="d-block w-100" alt="Diagnostico por imagenes">
               </div>
               <div class="carousel-item">
-                <img src="IMAGENES/img labo.jpg" class="d-block w-100" alt="slide3">
+                <img src="IMAGENES/img-labo.jpg" class="d-block w-100" alt="Laboratorio">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
@@ -110,16 +110,16 @@
           <section class="container-fluid">
             <div class="row row-cols-1 row-cols-sm-3 row-cols-md-5">
               <button class="btn btn-outline-success btn-xs mx-4" onclick="mostrarDesplegable()" type="button">Preparacion para estudios
-                <img src="IMAGENES/img preparacion.JPG" style="width: 270px;height: 100px;" class="img-fluid mr-2">
+                <img src="IMAGENES/img-preparacion.JPG" style="width: 270px;height: 100px;" class="img-fluid mr-2">
               </button>
               <button class="btn btn-outline-info btn-xs mx-4" onclick="mostrarDesplegable2()" type="button">Circuito Completo
-                <img src="IMAGENES/img circuito.JPG" style="width: 270px;height: 100px;" class="img-fluid mr-2">
+                <img src="IMAGENES/img-circuito.JPG" style="width: 270px;height: 100px;" class="img-fluid mr-2">
               </button>
               <button class="btn btn-outline-danger btn-xs mx-4" onclick="mostrarDesplegable3()" type="button">Campaña de vacunación
-                <img src="IMAGENES/img vacunas.JPG" style="width: 270px;height: 100px;" class="img-fluid mr-2">
+                <img src="IMAGENES/img-vacunas.JPG" style="width: 270px;height: 100px;" class="img-fluid mr-2">
               </button>
               <button class="btn btn-outline-primary btn-xs mx-4" onclick="mostrarDesplegable4()" type="button">Programa de Capacitación
-                <img src="IMAGENES/img practicas.JPG" style="width: 270px;height: 100px;" class="img-fluid mr-2">
+                <img src="IMAGENES/img-practicas.JPG" style="width: 270px;height: 100px;" class="img-fluid mr-2">
               </button>
               </div>
           </section>
@@ -233,8 +233,9 @@
           <br>
           
           
-</body>
-<div class="container-fluid">
+
+<footer class="container-fluid">
   <span class="border w-100 text-black mb-0 p-2 fs-6 d-flex justify-content-center" id="Copyright" >© Copyright 2023 sanatorioliveheart.com.ar</span>
-</div>
+</footer>
+    </body>
 </html>
