--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <a class="nav-link mx-3" href="PAGES/especialidades.html">Especialidades</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link mx-3" href="PAGES/obrasSociales.html">Obras Sociales</a>
+                    <a class="nav-link mx-3" href="PAGES/ObrasSociales.html">Obras Sociales</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link mx-3" href="PAGES/turnos.html">Turnos</a>
