--- a/PAGES/contacto.html
+++ b/PAGES/contacto.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.rtl.min.css" integrity="sha384-T5m5WERuXcjgzF8DAb7tRkByEZQGcpraRTinjpywg37AO96WoYN9+hrhDVoM6CaT" crossorigin="anonymous">
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="PAGES/estilos.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -29,16 +29,16 @@
                     <a class="nav-link" href="index.html">Inicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link mx-3" href="especialidades.html">Especialidades</a>
+                    <a class="nav-link mx-3" href="PAGES/especialidades.html">Especialidades</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link mx-3" href="obrasSociales.html">Obras Sociales</a>
+                    <a class="nav-link mx-3" href="PAGES/ObrasSociales.html">Obras Sociales</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link mx-3" href="turnos.html">Turnos</a>
+                    <a class="nav-link mx-3" href="PAGES/turnos.html">Turnos</a>
                   </li>
                   <li class="nav-item">
-                    <a  class="nav-link mx-3" href="contacto.html">Contacto</a>
+                    <a  class="nav-link mx-3" href="PAGES/contacto.html">Contacto</a>
                     
                   </li>
                 </ul>
