--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                <div id="map-container" class=" mt-8 container justify-content-center align-items-center d-flex ;" style="background-color: lightpink;">
                 <div class="row">
                   <div class="col-sm-6">
-                    <img class="img-fluid" src="IMAGENES/img-hospital.png" style="width: 500px;height: auto;" alt="Imagen">
+                    <img class="img-fluid" src="IMAGENES/img-hospital.png" style="width: 500px;height: auto;" alt="Imagen hospital">
               </div> 
                   <div class="col-sm-6">
                     <div class="d-flex justify-content-center align-items-center">
