--- a/PAGES/turnos.html
+++ b/PAGES/turnos.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.rtl.min.css" integrity="sha384-T5m5WERuXcjgzF8DAb7tRkByEZQGcpraRTinjpywg37AO96WoYN9+hrhDVoM6CaT" crossorigin="anonymous">
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="CSS/estilos.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -21,7 +21,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light" id="menuOpciones">
             <div class="container">
               <a class="navbar-brand" style="font-style: italic;font-size: 30px;"  ><b> Sanatorio LiveHeart </b></a>
-              <img src="IMAGENES/foto sanatorio.jpg" style="width:100px;height: 100px;">
+              <img src="IMAGENES/foto-sanatorio.jpg" style="width:100px;height: 100px;">
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -31,16 +31,16 @@
                     <a class="nav-link" href="index.html">Inicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link mx-3" href="especialidades.html">Especialidades</a>
+                    <a class="nav-link mx-3" href="PAGES/especialidades.html">Especialidades</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link mx-3" href="obrasSociales.html">Obras Sociales</a>
+                    <a class="nav-link mx-3" href="PAGES/ObrasSociales.html">Obras Sociales</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link mx-3" href="turnos.html">Turnos</a>
+                    <a class="nav-link mx-3" href="PAGES/turnos.html">Turnos</a>
                   </li>
                   <li class="nav-item">
-                    <a  class="nav-link mx-3" href="contacto.html">Contacto</a>
+                    <a  class="nav-link mx-3" href="PAGES/contacto.html">Contacto</a>
                     
                   </li>
                 </ul>
@@ -48,7 +48,7 @@
             </div>
           </nav>
         <div class="container">
-          <form action="mostrar_datos.html">
+          <form action="PAGES/mostrar_datos.html">
            <fieldset >
              <div class="row">
                <div class="col-sm-4 ">
