--- a/PAGES/especialidades.html
+++ b/PAGES/especialidades.html
@@ -17,11 +17,11 @@
 
     <header class="container-fluid bg-primary-subtle d-flex justify-content-end">
         <p class="text-dark mb-0 p-2 fs-6">Contactanos (351)-7883911</p></header>
-        <link rel="stylesheet" href="estilos.css">
+        <link rel="stylesheet" href="CSS/estilos.css">
         <nav class="navbar navbar-expand-lg navbar-light bg-light" id="menuOpciones">
             <div class="container">
               <a class="navbar-brand" style="font-style: italic;font-size: 30px;"  ><b> Sanatorio LiveHeart </b></a>
-              <img src="IMAGENES/foto sanatorio.jpg" style="width:100px;height: 100px;">
+              <img src="IMAGENES/foto-sanatorio.jpg" style="width:100px;height: 100px;">
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -31,16 +31,16 @@
                     <a class="nav-link" href="index.html">Inicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link mx-3" href="especialidades.html">Especialidades</a>
+                    <a class="nav-link mx-3" href="PAGES/especialidades.html">Especialidades</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link mx-3" href="obrasSociales.html">Obras Sociales</a>
+                    <a class="nav-link mx-3" href="PAGES/ObrasSociales.html">Obras Sociales</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link mx-3" href="turnos.html">Turnos</a>
+                    <a class="nav-link mx-3" href="PAGES/turnos.html">Turnos</a>
                   </li>
                   <li class="nav-item">
-                    <a  class="nav-link mx-3" href="contacto.html">Contacto</a>
+                    <a  class="nav-link mx-3" href="PAGES/contacto.html">Contacto</a>
                     
                   </li>
                 </ul>
@@ -50,46 +50,46 @@
           <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="3000">
-                <img src="IMAGENES/img-esp-cardio.jpg"  class="d-block w-100" alt="slide1">
+                <img src="IMAGENES/img-esp-cardio.jpg"  class="d-block w-100" alt="cardio">
               </div>
               <div class="carousel-item ">
-                <img src="IMAGENES/img-esp-clinica.jpg" class="d-block w-100" alt="slide2">
+                <img src="IMAGENES/img-esp-clinica.jpg" class="d-block w-100" alt="clinica">
               </div>
               <div class="carousel-item">
-                <img src="IMAGENES/img-esp-derma.jpg" class="d-block w-100" alt="slide3">
+                <img src="IMAGENES/img-esp-derma.jpg" class="d-block w-100" alt="dermatologia">
               </div>
               <div class="carousel-item ">
-                <img src="IMAGENES/img-esp-diabetes.jpg" class="d-block w-100" alt="slide4" >
+                <img src="IMAGENES/img-esp-diabetes.jpg" class="d-block w-100" alt="diabetologia" >
               </div>
               <div class="carousel-item ">
-                <img src="IMAGENES/img-esp-trauma.JPG" class="d-block w-100" alt="slide5" >
+                <img src="IMAGENES/img-esp-trauma.JPG" class="d-block w-100" alt="traumatologia" >
               </div>
               <div class="carousel-item ">
-                <img src="IMAGENES/img-esp-reuma.JPG" class="d-block w-100" alt="slide6" >
+                <img src="IMAGENES/img-esp-reuma.JPG" class="d-block w-100" alt="reumatologia" >
               </div>
               <div class="carousel-item ">
-                <img src="IMAGENES/img-esp-psico.jpg" class="d-block w-100" alt="slide7" >
+                <img src="IMAGENES/img-esp-psico.jpg" class="d-block w-100" alt="psicologia" >
               </div>
               <div class="carousel-item ">
-                <img src="IMAGENES/img-esp-pediatria.JPG" class="d-block w-100" alt="slide8" >
+                <img src="IMAGENES/img-esp-pediatria.JPG" class="d-block w-100" alt="pediatria" >
               </div>
               <div class="carousel-item ">
-                <img src="IMAGENES/img-esp-oftalm.JPG" class="d-block w-100" alt="slide9" >
+                <img src="IMAGENES/img-esp-oftalm.JPG" class="d-block w-100" alt="oftalmologia" >
               </div>
               <div class="carousel-item ">
-                <img src="IMAGENES/img-esp-odonto.jpg" class="d-block w-100" alt="slide10" >
+                <img src="IMAGENES/img-esp-odonto.jpg" class="d-block w-100" alt="odontologia" >
               </div>
               <div class="carousel-item ">
-                <img src="IMAGENES/img-esp-nutri.jpg" class="d-block w-100" alt="slide11" >
+                <img src="IMAGENES/img-esp-nutri.jpg" class="d-block w-100" alt="nutricion" >
               </div>
               <div class="carousel-item ">
-                <img src="IMAGENES/img-esp-gastro.JPG" class="d-block w-100" alt="slide12" >
+                <img src="IMAGENES/img-esp-gastro.JPG" class="d-block w-100" alt="gastronomia" >
               </div>
               <div class="carousel-item ">
-                <img src="IMAGENES/img-esp-endoc.jpg" class="d-block w-100" alt="slide13" >
+                <img src="IMAGENES/img-esp-endoc.jpg" class="d-block w-100" alt="endocrinologia" >
               </div>
               <div class="carousel-item ">
-                <img src="IMAGENES/img-esp-diagn.jpg" class="d-block w-100" alt="slide14" >
+                <img src="IMAGENES/img-esp-diagn.jpg" class="d-block w-100" alt="imagenes" >
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
