--- a/PAGES/ObrasSociales.html
+++ b/PAGES/ObrasSociales.html
@@ -19,7 +19,7 @@
    
     <header class="container-fluid bg-primary-subtle d-flex justify-content-end">
         <p class="text-dark mb-0 p-2 fs-6">Contactanos (351)-7883911</p></header>
-        <link rel="stylesheet" href="PAGES/estilos.css">
+        <link rel="stylesheet" href="CSS/estilos.css">
         <nav class="navbar navbar-expand-lg navbar-light bg-light" id="menuOpciones">
             <div class="container">
               <a class="navbar-brand" style="font-style: italic;font-size: 30px;"  ><b> Sanatorio LiveHeart </b></a>
