--- a/PAGES/ObrasSociales.html
+++ b/PAGES/ObrasSociales.html
@@ -33,16 +33,16 @@
                     <a class="nav-link" href="index.html">Inicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link mx-3" href="PAGES/especialidades.html">Especialidades</a>
+                    <a class="nav-link mx-3" href="especialidades.html">Especialidades</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link mx-3" href="PAGES/ObrasSociales.html">Obras Sociales</a>
+                    <a class="nav-link mx-3" href="ObrasSociales.html">Obras Sociales</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link mx-3" href="PAGES/turnos.html">Turnos</a>
+                    <a class="nav-link mx-3" href="turnos.html">Turnos</a>
                   </li>
                   <li class="nav-item">
-                    <a  class="nav-link mx-3" href="PAGES/contacto.html">Contacto</a>
+                    <a  class="nav-link mx-3" href="contacto.html">Contacto</a>
                     
                   </li>
                 </ul>
