--- a/index.html
+++ b/index.html
@@ -65,19 +65,19 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                   <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Inicio</a>
+                    <a class="nav-link" href="/PreEntrega1RiosSusana/index.html">Inicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link mx-3" href="PAGES/especialidades.html">Especialidades</a>
+                    <a class="nav-link mx-3" href="/PreEntrega1RiosSusana/PAGES/especialidades.html">Especialidades</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link mx-3" href="PAGES/ObrasSociales.html">Obras Sociales</a>
+                    <a class="nav-link mx-3" href="/PreEntrega1RiosSusana/PAGES/ObrasSociales.html">Obras Sociales</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link mx-3" href="PAGES/turnos.html">Turnos</a>
+                    <a class="nav-link mx-3" href="/PreEntrega1RiosSusana/PAGES/turnos.html">Turnos</a>
                   </li>
                   <li class="nav-item">
-                    <a  class="nav-link mx-3" href="PAGES/contacto.html">Contacto</a>
+                    <a  class="nav-link mx-3" href="/PreEntrega1RiosSusana/PAGES/contacto.html">Contacto</a>
                     
                   </li>
                 </ul>
