--- a/PAGES/ObrasSociales.html
+++ b/PAGES/ObrasSociales.html
@@ -59,24 +59,24 @@
             <div class="row">
               <div class="col-12 row" >
                   <div class="col-md-4 col-sm-12 col-lg-4 col-xl-4" >
-                   <img src="IMAGENES/img-osde.JPG" style=" width: 270px;height: 100px;"> </div>
+                   <img src="/PreEntrega1RiosSusana/IMAGENES/img-osde.JPG" style=" width: 270px;height: 100px;"> </div>
                   <div class="col-md-4 col-sm-12 col-lg-4 col-xl-4 " >
-                    <img src="IMAGENES/img-swiss.JPG" style=" width: 270px;height: 100px;"> </div>
+                    <img src="/PreEntrega1RiosSusana/IMAGENES/img-swiss.JPG" style=" width: 270px;height: 100px;"> </div>
                   <div class="col-md-4 col-sm-12 col-lg-4 col-xl-4 " >
-                    <img src="IMAGENES/img-met.JPG" style=" width: 270px;height: 100px;"> </div>
+                    <img src="/PreEntrega1RiosSusana/IMAGENES/img-met.JPG" style=" width: 270px;height: 100px;"> </div>
               <!-- Force next columns to break to new line -->
                   <div class="col-md-4 col-sm-12 col-lg-4 col-xl-4 my-5" >
-                     <img src="IMAGENES/img-sancor.JPG" style=" width: 270px;height: 100px;"> </div>
+                     <img src="/PreEntrega1RiosSusana/IMAGENES/img-sancor.JPG" style=" width: 270px;height: 100px;"> </div>
                   <div class="col-md-4 col-sm-12 col-lg-4 col-xl-4 my-5" >
-                     <img src="IMAGENES/img-daspu.JPG" style="width: 270px;height: 100px;"> </div>
+                     <img src="/PreEntrega1RiosSusana/IMAGENES/img-daspu.JPG" style="width: 270px;height: 100px;"> </div>
                   <div class="col-md-4 col-sm-12 col-lg-4 col-xl-4 my-5" >
-                        <img src="IMAGENES/img-boreal.JPG" style=" width: 270px;height: 100px;"> </div>
+                        <img src="/PreEntrega1RiosSusana/IMAGENES/img-boreal.JPG" style=" width: 270px;height: 100px;"> </div>
                   <div class="col-md-4 col-sm-12 col-lg-4 col-xl-4" >
-                        <img src="IMAGENES/img-federada.JPG" style=" width: 270px;height: 100px;"> </div>
+                        <img src="/PreEntrega1RiosSusana/IMAGENES/img-federada.JPG" style=" width: 270px;height: 100px;"> </div>
                   <div class="col-md-4 col-sm-12 col-lg-4 col-xl-4 " >
-                        <img src="IMAGENES/img-galeno.JPG" style=" width: 270px;height: 100px;"> </div>
+                        <img src="/PreEntrega1RiosSusana/IMAGENES/img-galeno.JPG" style=" width: 270px;height: 100px;"> </div>
                   <div class="col-md-4 col-sm-12 col-lg-4 col-xl-4" >
-                       <img src="IMAGENES/img-dasuten.JPG" style=" width: 270px;height: 100px;"> </div>
+                       <img src="/PreEntrega1RiosSusana/IMAGENES/img-dasuten.JPG" style=" width: 270px;height: 100px;"> </div>
             </div>
           </div>
 </section>
