--- a/PAGES/ObrasSociales.html
+++ b/PAGES/ObrasSociales.html
@@ -51,7 +51,7 @@
           </nav>
     
     <div class="container">
-        <img src="IMAGENES/img-obras.JPG" class="img-fluid" style=" width: 1250px;height: 250px;" ></div>
+        <img src="/PreEntrega1RiosSusana/IMAGENES/img-obras.JPG" class="img-fluid" style=" width: 1250px;height: 250px;" ></div>
     <section class="coberturas">
         <div class="container text-center">
             
