--- a/PAGES/especialidades.html
+++ b/PAGES/especialidades.html
@@ -21,7 +21,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light" id="menuOpciones">
             <div class="container">
               <a class="navbar-brand" style="font-style: italic;font-size: 30px;"  ><b> Sanatorio LiveHeart </b></a>
-              <img src="IMAGENES/foto-sanatorio.jpg" style="width:100px;height: 100px;">
+              <img src="/PreEntrega1RiosSusana/IMAGENES/foto-sanatorio.jpg" style="width:100px;height: 100px;">
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -50,46 +50,46 @@
           <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="3000">
-                <img src="IMAGENES/img-esp-cardio.jpg"  class="d-block w-100" alt="cardio">
+                <img src="/PreEntrega1RiosSusana/IMAGENES/img-esp-cardio.jpg"  class="d-block w-100" alt="cardio">
               </div>
               <div class="carousel-item ">
-                <img src="IMAGENES/img-esp-clinica.jpg" class="d-block w-100" alt="clinica">
+                <img src="/PreEntrega1RiosSusana/IMAGENES/img-esp-clinica.jpg" class="d-block w-100" alt="clinica">
               </div>
               <div class="carousel-item">
-                <img src="IMAGENES/img-esp-derma.jpg" class="d-block w-100" alt="dermatologia">
+                <img src="/PreEntrega1RiosSusana/IMAGENES/img-esp-derma.jpg" class="d-block w-100" alt="dermatologia">
               </div>
               <div class="carousel-item ">
-                <img src="IMAGENES/img-esp-diabetes.jpg" class="d-block w-100" alt="diabetologia" >
+                <img src="/PreEntrega1RiosSusana/IMAGENES/img-esp-diabetes.jpg" class="d-block w-100" alt="diabetologia" >
               </div>
               <div class="carousel-item ">
-                <img src="IMAGENES/img-esp-trauma.JPG" class="d-block w-100" alt="traumatologia" >
+                <img src="/PreEntrega1RiosSusana/IMAGENES/img-esp-trauma.JPG" class="d-block w-100" alt="traumatologia" >
               </div>
               <div class="carousel-item ">
-                <img src="IMAGENES/img-esp-reuma.JPG" class="d-block w-100" alt="reumatologia" >
+                <img src="/PreEntrega1RiosSusana/IMAGENES/img-esp-reuma.JPG" class="d-block w-100" alt="reumatologia" >
               </div>
               <div class="carousel-item ">
-                <img src="IMAGENES/img-esp-psico.jpg" class="d-block w-100" alt="psicologia" >
+                <img src="/PreEntrega1RiosSusana/IMAGENES/img-esp-psico.jpg" class="d-block w-100" alt="psicologia" >
               </div>
               <div class="carousel-item ">
-                <img src="IMAGENES/img-esp-pediatria.JPG" class="d-block w-100" alt="pediatria" >
+                <img src="/PreEntrega1RiosSusana/IMAGENES/img-esp-pediatria.JPG" class="d-block w-100" alt="pediatria" >
               </div>
               <div class="carousel-item ">
-                <img src="IMAGENES/img-esp-oftalm.JPG" class="d-block w-100" alt="oftalmologia" >
+                <img src="/PreEntrega1RiosSusana/IMAGENES/img-esp-oftalm.JPG" class="d-block w-100" alt="oftalmologia" >
               </div>
               <div class="carousel-item ">
-                <img src="IMAGENES/img-esp-odonto.jpg" class="d-block w-100" alt="odontologia" >
+                <img src="/PreEntrega1RiosSusana/IMAGENES/img-esp-odonto.jpg" class="d-block w-100" alt="odontologia" >
               </div>
               <div class="carousel-item ">
-                <img src="IMAGENES/img-esp-nutri.jpg" class="d-block w-100" alt="nutricion" >
+                <img src="/PreEntrega1RiosSusana/IMAGENES/img-esp-nutri.jpg" class="d-block w-100" alt="nutricion" >
               </div>
               <div class="carousel-item ">
-                <img src="IMAGENES/img-esp-gastro.JPG" class="d-block w-100" alt="gastronomia" >
+                <img src="/PreEntrega1RiosSusana/IMAGENES/img-esp-gastro.JPG" class="d-block w-100" alt="gastronomia" >
               </div>
               <div class="carousel-item ">
-                <img src="IMAGENES/img-esp-endoc.jpg" class="d-block w-100" alt="endocrinologia" >
+                <img src="/PreEntrega1RiosSusana/IMAGENES/img-esp-endoc.jpg" class="d-block w-100" alt="endocrinologia" >
               </div>
               <div class="carousel-item ">
-                <img src="IMAGENES/img-esp-diagn.jpg" class="d-block w-100" alt="imagenes" >
+                <img src="/PreEntrega1RiosSusana/IMAGENES/img-esp-diagn.jpg" class="d-block w-100" alt="imagenes" >
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
