--- a/PAGES/especialidades.html
+++ b/PAGES/especialidades.html
@@ -28,19 +28,19 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                   <li class="nav-item active">
-                    <a class="nav-link" href="../index.html">Inicio</a>
+                    <a class="nav-link" href="index.html">Inicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link mx-3" href="especialidades.html">Especialidades</a>
+                    <a class="nav-link mx-3" href="/PreEntrega1RiosSusana/PAGES/especialidades.html">Especialidades</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link mx-3" href="ObrasSociales.html">Obras Sociales</a>
+                    <a class="nav-link mx-3" href="/PreEntrega1RiosSusana/PAGES/ObrasSociales.html">Obras Sociales</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link mx-3" href="turnos.html">Turnos</a>
+                    <a class="nav-link mx-3" href="/PreEntrega1RiosSusana/PAGES/turnos.html">Turnos</a>
                   </li>
                   <li class="nav-item">
-                    <a  class="nav-link mx-3" href="contacto.html">Contacto</a>
+                    <a  class="nav-link mx-3" href="/PreEntrega1RiosSusana/PAGES/contacto.html">Contacto</a>
                     
                   </li>
                 </ul>
