--- a/PAGES/turnos.html
+++ b/PAGES/turnos.html
@@ -21,7 +21,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light" id="menuOpciones">
             <div class="container">
               <a class="navbar-brand" style="font-style: italic;font-size: 30px;"  ><b> Sanatorio LiveHeart </b></a>
-              <img src="IMAGENES/foto-sanatorio.jpg" style="width:100px;height: 100px;">
+              <img src="PreEntrega1RiosSusana/IMAGENES/foto-sanatorio.jpg" style="width:100px;height: 100px;">
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
