--- a/PAGES/especialidades.html
+++ b/PAGES/especialidades.html
@@ -28,7 +28,7 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                   <li class="nav-item active">
-                    <a class="nav-link" href="../index.html">Inicio</a>
+                    <a class="nav-link" href="/PreEntrega1RiosSusana/index.html">Inicio</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link mx-3" href="/PreEntrega1RiosSusana/PAGES/especialidades.html">Especialidades</a>
