--- a/PAGES/especialidades.html
+++ b/PAGES/especialidades.html
@@ -21,14 +21,14 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light" id="menuOpciones">
             <div class="container">
               <a class="navbar-brand" style="font-style: italic;font-size: 30px;"  ><b> Sanatorio LiveHeart </b></a>
-              <img src="/PreEntrega1RiosSusana/IMAGENES/foto-sanatorio.jpg" style="width:100px;height: 100px;">
+              <img src="../IMAGENES/foto-sanatorio.jpg" style="width:100px;height: 100px;">
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                   <li class="nav-item active">
-                    <a class="nav-link" href="/PreEntrega1RiosSusana/index.html">Inicio</a>
+                    <a class="nav-link" href="../index.html">Inicio</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link mx-3" href="/PreEntrega1RiosSusana/PAGES/especialidades.html">Especialidades</a>
