--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <link rel="stylesheet" href="CSS/estilos.css">
         <nav class="navbar navbar-expand-lg navbar-light bg-light" id="menuOpciones">
             <div class="container">
-              <a class="navbar-brand" href="index.html" style="font-style: italic;font-size: 30px;"  ><b> Sanatorio LiveHeart </b></a>
+              <a class="navbar-brand" style="font-style: italic;font-size: 30px;"  ><b> Sanatorio LiveHeart </b></a>
               <img src="IMAGENES/foto-sanatorio.jpg" style="width:100px;height: 100px;">
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
