--- a/index.html
+++ b/index.html
@@ -217,9 +217,8 @@
                   <div class="col-sm-6">
                     <div class="d-flex justify-content-center align-items-center">
                       <div class="mt-4">
-                  <iframe  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3404.6140916894783!2d-64.18750852559603!3d-31.424756896653854!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432a28fc0add5c5%3A0xfa22bc822f3eb0d8!2sItuzaing%C3%B3%20672%2C%20X5000IJN%20C%C3%B3rdoba!5e0!3m2!1ses!2sar!4v1682812883386!5m2!1ses!2sar" 
-          
-    allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                 <iframe class="embed-responsive embed-responsive-16by9" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3404.6140916894783!2d-64.18750852559603!3d-31.424756896653854!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432a28fc0add5c5%3A0xfa22bc822f3eb0d8!2sItuzaing%C3%B3%20672%2C%20X5000IJN%20C%C3%B3rdoba!5e0!3m2!1ses!2sar!4v1682812883386!5m2!1ses!2sar" 
+                     width="500" height="300" style="border:0; transform: translateX(30px); " allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
       </div>
     </div>
